--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,11 @@ Version: 0.0.1.0
 Authors@R: person("Michael", "Floren", email = "michael.floren@unco.com", role = c("aut", "cre"))
 Description: This is for getting information out about things that I am working on for my dissertation. Documentation is simply for practice, and functions are all works in progress. All useful and new functions will eventually be placed into a new package.
 Depends: R (>= 3.2.0)
-Imports: stringr
+Imports: 
+    stringr,
+    pscl,
+    pROC,
+    toOrdinal
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
